# libusbmuxc

./: CMakeLists.txt  README.md
include/usbmuxc/: macro_def.h  macro_undef.h  usbmuxc.h
src/: usbmuxc.cpp
test/: usbmuxc_test.cpp
